# postcodes

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: index.html
postcodes/scripts/: __main__.py  extract.py  prepare.py  pyramid.py
