[tool.poetry]
name = "postcodes"
version = "0.1.0"
description = "Post Code Toolbox"
authors = ["Robofarm <hello@robofarm.io>"]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.7.0"
geojson = "^2.5.0"
osmium = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[tool.poetry.scripts]
postcodes = "postcodes.scripts.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
